--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body
 
 #homeFullScreen {
     background-image: url('../images/header.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
     overflow: hidden;
 }
 
